XMLtoCSV/objects/unpackaged/objects/Requirement_Comment_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - used to capture ongoing comments regarding Requirements gathered</description>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_vod__c</fullName>
        <label>Notify?</label>
        <picklist>
            <picklistValues>
                <fullName>Client Project Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Req. Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_vod__c</fullName>
        <label>Requirement</label>
        <referenceTo>Requirement_vod__c</referenceTo>
        <relationshipLabel>Requirement Comments</relationshipLabel>
        <relationshipName>Requirement_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Requirement Comment</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Requirements Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>